Simplify implementation by using URL directly